# cookiecutter-pypackage

./: .gitignore  README.md  README.rst  cookiecutter.json  tox.ini
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .travis.yml  CONTRIBUTING.rst  Makefile  README.md  __init__.py  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/docs/: Makefile  api.rst  conf.py  index.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
